src/test/deca/syntax/valid/personalTests/lexer/testOperators.deca
// Description :
//      test de programmes lexicalement corrects. On teste les opérateurs.
// Résultats :
//      cf Documentation
// Historique :
//      créé le 19/12/2023

< > = + - * / % . , ) ( { } ! ; == !=
<= >= && ||